<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="onRecMsg"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" />

    <Button
        android:id="@+id/btn_open_uart"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="onOpenUart"
        android:text="@string/str_open_uart" />

    <Button
        android:id="@+id/btn_set_uart"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="onSetUart"
        android:text="@string/str_set_uart" />

    <Button
        android:id="@+id/btn_close_uart"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="onCloseUart"
        android:text="@string/str_close_uart" />

    <Button
        android:id="@+id/btn_send_msg_uart"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="onSentMsg"
        android:text="@string/str_send_uart_msg" />

    <Button
        android:id="@+id/btn_rec_msg_uart"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="onRecMsg"
        android:text="@string/str_recevie_uart_msg" />

    <Button
        android:id="@+id/btn_exit_uart"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="onExitUart"
        android:text="@string/str_exit_uart" />

</LinearLayout>